tests/sumo/tls/wauts/errors/cross3ltl_error_unknown_wautid/errors.sumo
Error: Waut 'x' was not yet defined.
Quitting (on error).
